--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
+    "@types/nodemailer": "^7.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
