--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.5",
+    "dotenv": "^17.2.2",
     "nodemailer": "^7.0.6"
   },
   "devDependencies": {
