--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
   "description": "",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.5",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
+    "express": "^5.1.0",
     "nodemailer": "^7.0.6"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
     "@types/nodemailer": "^7.0.1",
     "ts-node": "^10.9.2",
